--- a/BellezaTest/BellezaTestApp/BellezaTestApp/BellezaTestApp.csproj
+++ b/BellezaTest/BellezaTestApp/BellezaTestApp/BellezaTestApp.csproj
@@ -20,7 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
-    <Folder Include="ViewModels\" />
+    <EmbeddedResource Update="Views\ProductoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
